--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native-stack": "^6.10.0",
+    "material-ui-community-icons": "^0.15.0",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-pager-view": "^6.3.3",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
