--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-drop-shadow": "^1.0.0",
+    "react-native-icomoon": "^0.1.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-safe-area-context": "^4.10.7",
